[workspace]
members = [
    "rust-client-game",
    "rust-common-game",
    "rust-server-game",
]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3