[workspace]
members = [
    "lerp-client-game",
    "lerp-common-game",
    "lerp-server-game",
]
resolver = "2"

# Enable max optimizations for dependencies, but not for our code.
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
# Internal
lerp-common-game = { path = "./lerp-common-game", version = "0.1.0" }

# External
avian2d = { version = "0.2.0", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "serialize", "enhanced-determinism" ] }
axum = { version = "0.8.1" }
bevy = { version = "0.15.3", default-features = false, features = ["multi_threaded", "bevy_state", "serialize"] }
bevy_ecs_tilemap = { version = "0.15"}
bevy_prototype_lyon = "0.13"
bevy_rand = { version = "0.9" }
bevy_simple_text_input = "0.10"
bevy_transform_interpolation = "0.1"
leafwing-input-manager = "0.16"
lightyear = { git = "https://github.com/OlivierCoue/lightyear.git", rev = "99aed29", features = ["avian2d", "leafwing"] }
local-ip-address = "0.6.0"
rand = { version = "0.9" }
rand_core = "0.6"
reqwest = {version = "0.12.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.43.0" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
