[package]
name = "lerp-common-game"
version = "0.1.0"
edition = "2021"


[dependencies]
avian2d = { workspace = true }
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true }

[lints.clippy]
type_complexity = "allow"