[package]
name = "lerp-server-game"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
lerp-common-game = { workspace = true }

# External
avian2d = { workspace = true }
axum = { workspace = true, features = ["macros"] }
bevy = { workspace = true }
bevy_rand = { workspace = true, features = ["wyrand"] }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true }
local-ip-address = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }


[lints.clippy]
type_complexity = "allow"