[package]
name = "rust-client-game"
version = "0.1.0"
edition = "2021"


[dependencies]
avian2d = "0.2.0"
bevy = { version = "0.15", default-features = true, features = ["multi_threaded", "bevy_state", "serialize", "mp3"] }
bevy_ecs_tilemap = { version = "0.15"}
bevy_prototype_lyon = "0.13"
bevy_simple_text_input = "0.10"
bevy_transform_interpolation = "0.1"
leafwing-input-manager = "0.16"
lightyear = { git = "https://github.com/OlivierCoue/lightyear.git", rev = "eb7c47f", features = ["avian2d", "leafwing", "visualizer"] }
rand = { version = "0.9" }
reqwest = {version = "0.12.12", features = ["json"]}
rust-common-game = { path = "../rust-common-game" }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "sync"] }

[lints.clippy]
type_complexity = "allow"
 