[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
aes-gcm-siv = "0.11.1"
crossbeam-channel = "0.5.11"
enet-cs-sys = "0.1.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
] }
hex = "0.4.3"
prost = "0.12"
reqwest = { version = "0.11.24", features = ["blocking"] }
rust-common = { path = "../rust-common" }
tokio = { version = "1" }
