[package]
name = "rust-common-game"
version = "0.1.0"
edition = "2021"


[dependencies]
avian2d = { version = "0.2.0", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "serialize" ] }
bevy = { version = "0.15", default-features = false, features = ["multi_threaded", "bevy_state", "serialize"] }
leafwing-input-manager = "0.16"
lightyear = { git = "https://github.com/OlivierCoue/lightyear.git", rev = "b289145", features = ["avian2d", "leafwing"] }
serde = { version = "1.0.215", features = ["derive"] }

[lints.clippy]
type_complexity = "allow"