[package]
name = "rust-common"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = "0.4"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [ "experimental-threads" ] }
prost = "0.12"
reqwest = { version = "0.11.24" }
tokio = { version = "1" }

[build-dependencies]
dotenvy = "0.15.7"
prost-build = "0.5"