[package]
name = "rust-lambda-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["protobuf"] }
lambda_http = "0.10.0"
lambda_runtime = "0.10.0"
rust-common = { path = "../rust-common" }
rust-lambda-common = { path = "../rust-lambda-common" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
sqlx-cli = { version = "0.7.3" }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.7.0", features = ["v4"] }

[package.metadata.lambda.env]
DATABASE_URL = "postgresql://admin:password@postgres:5432/lerp-local"
