[package]
name = "rust-lambda-common"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["protobuf"] }
rust-common = { path = "../rust-common" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
uuid = { version = "1.7.0", features = ["v4"] }