[package]
name = "rust-lambda-common"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["protobuf"] }
prost = "0.12.6"
rust-common = { path = "../rust-common" }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "uuid" ] }
uuid = { version = "1.11.0", features = ["v4"] }