[package]
name = "rust-lambda-lobby"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["protobuf"] }
hex = "0.4.3"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
rust-common = { path = "../rust-common" }
rust-lambda-common = { path = "../rust-lambda-common" }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "uuid" ] }
sqlx-cli = { version = "0.8.2" }
tokio = { version = "1.41.1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.7.0", features = ["v4"] }

[package.metadata.lambda.env]
DATABASE_URL = "postgresql://admin:password@postgres:5432/lerp-local"
