[package]
name = "rust-lambda-scaler"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["eventbridge"] }
hex = "0.4.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = "0.96.0"
lambda_runtime = "0.13.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "uuid" ] }
sqlx-cli = { version = "0.8.2" }
tokio = { version = "1.41.1", features = ["macros"] }
uuid = { version = "1.7.0", features = ["v4"] }

[package.metadata.lambda.env]
DATABASE_URL = "postgresql://admin:password@postgres:5432/lerp-local"
