[package]
name = "rust-server-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
axum = { version = "0.7.4", features = [ "macros" ] }
axum-extra = { version = "0.9.2", features = [ "protobuf" ] }
hex = "0.4.3"
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
rust-common = { path = "../rust-common" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = "1.7.0"

[package.metadata.lambda.env]
DATABASE_URL = "postgresql://admin:password@localhost:5432/lerp-local?schema=public"