[package]
name = "rust-server-game"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
bevy_ecs = "0.12.1"
dotenvy = "0.15.7"
enet-cs-sys = "0.1.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [ "experimental-threads" ] }
hex = "0.4.3"
image = "0.24.8"
prost = "0.12"
rand = "0.8.5"
rand_chacha = "0.3.1"
rust-common = { path = "../rust-common" }
rust-server-common = { path = "../rust-server-common" }
spin_sleep = "1.1.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
tokio = { version = "1", features = ["full"] }
uuid = "1.7.0"