[package]
name = "rust-server-game"
version = "0.1.0"
edition = "2021"


[dependencies]
avian2d = { version = "0.1.2", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "serialize" ] }
bevy = { version = "0.14", default-features = false, features = ["multi_threaded", "bevy_state", "serialize"] }
bitflags = { version = "2.6", features = ["serde"] }
leafwing-input-manager = "0.15"
lightyear = { version = "0.17", features = ["avian2d", "leafwing"] }
local-ip-address = "0.6.0"
rust-common-game = { path = "../rust-common-game" }
serde = { version = "1.0.215", features = ["derive"] }