[package]
name = "rust-server-game"
version = "0.1.0"
edition = "2021"


[dependencies]
avian2d = { version = "0.2.0", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "serialize" ] }
bevy = { version = "0.15", default-features = false, features = ["multi_threaded", "bevy_state", "serialize"] }
bitflags = { version = "2.6", features = ["serde"] }
leafwing-input-manager = "0.16"
lightyear = { git = "https://github.com/OlivierCoue/lightyear.git", branch = "custom/1", features = ["avian2d", "leafwing"] }
local-ip-address = "0.6.0"
rust-common-game = { path = "../rust-common-game" }
serde = { version = "1.0.215", features = ["derive"] }

[lints.clippy]
type_complexity = "allow"