[package]
name = "rust-server-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
dotenvy = "0.15.7"
hex = "0.4.3"
prost = "0.12"
reqwest = { version = "0.11.24", features = ["blocking"] }
rust-common = { path = "../rust-common" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }