[package]
name = "rust-server-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
dotenvy = "0.15.7"
enet-sys = "1.0.4"
hex = "0.4.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = "0.96.0"
prost = "0.12.6"
reqwest = { version = "0.12.9", features = ["blocking"] }
rust-common = { path = "../rust-common" }
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0.114"