[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
bevy_ecs = "0.12.1"
enet-cs-sys = "0.1.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
pathfinding = "4.6.0"
protobuf = "3.3.0"
rand = "0.8.4"
rust-common = { path = "../rust-common" }
spin_sleep = "1.1.1"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
